# AngioDiabetesRegulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  ENV.yml  README.md  ReverseLookup.py  TestReverseLookup.py  TestReverseLookupLibrary.py  constants.py  demofile2.json  demofile2.txt  dev_api_download.py  dev_check_CUDA.py  dev_go_download.py  dev_mrna_download.py  dev_predict_miRNA.py  dev_predict_miRNA_v1.py  dev_predict_miRNA_v2.cpp  dev_predict_miRNA_v2.py  dev_scoring_basic.py  dev_scoring_miRNA_basic.py  dev_scoring_products_basic.py  dev_test_api_download.py  embl_parsing_test  full_analysis_classes.py  how to choose goterms.txt  logging_config.py  main.py  once.py  python_sequence_comparison_score.txt  read_input.py  run.ipynb  test.py  test_add_variation_to_quad_base_number.py  test_class.py  test_playground.py  test_playground_async_product_orthologs.py  test_playground_async_products.py  test_playground_child_parent_term_genes.py  test_playground_connection_cacher.py  (+10 more)
apps/: CMakeLists.txt  main.cpp  main.cu
archive/: data_24-04-2023.json
cache/: connection_cache.json
chronic_infl_cancer_1/: input.txt  input_01-09-2023.txt  input_02-09-2023.txt  input_03-09-2023.txt  input_06-09-2023.txt  input_31-08-2023.txt  input_v1.txt  readme.txt  statistically_relevant_genes_01-09-2023.json  statistically_relevant_genes_02-09-2023.json  statistically_relevant_genes_03-09-2023.json  statistically_relevant_genes_03-09-2023_p=0.10.json  statistically_relevant_genes_03-09-2023v1.json  statistically_relevant_genes_06-09-2023.json  statistically_relevant_genes_25-08-2023.json  statistically_relevant_genes_31-08-2023.json
compressed/: angiogenesis-0001525.xlsx  angiogenesis-miRDB.xls  cellular ketone body metabolic process-0046950.xlsx  cellular ketone body metabolic process-miRDB.xls  cellular response to insulin stimulus-0032869.xlsx  cellular response to insulin stimulus.txt  endothelial cell proliferation-0001935.xlsx  endothelial cell proliferation.txt  endothelium development-0003158.xlsx  endothelium development.txt  glucose metabolic process.txt-miRDB.xls  insulin binding-0043559.xlsx  insulin binding-miRDB.xls  insulin binding.txt  insulin catabolic process-miRDB.xls  insulin catabolic process.txt  insulin receptor binding-0005158.xlsx  insulin receptor binding-miRDB.xls  insulin receptor binding.txt  insulin receptor complex-miRDB.xls  insulin receptor internalization-0038016.xlsx  insulin receptor internalization-miRDB.xls  insulin receptor recycling-0038020.xlsx  insulin receptor recycling.txt  insulin receptor signaling pathway via phosphatidylinositol 3-kinase-0038028.xlsx  insulin receptor signaling pathway-miRDB.xls  insulin receptor signaling pathway.txt  insulin receptor substrate binding-miRDB.xls  insulin-activated receptor activity-miRDB.xls  insulin-activated receptor activity.txt  insulin-like growth factor binding-0005520.xlsx  insulin-like growth factor binding-miRDB.xls  insulin-responsive compartment-0032593.xlsx  insulin-responsive compartment-miRDB.xls  insulin-responsive compartment.txt  linux concentating files <-  negative regulation of cellular response to insulin stimulus-1900077.xlsx  negative regulation of cellular response to insulin stimulus-miRDB.xls  negative regulation of cellular response to insulin stimulus.txt  negative regulation of endothelial cell proliferation.txt  (+49 more)
cpp-library/: CMakeLists.txt
cpp-library/include/: Constants.h  FileUtils.h  HighResolutionTimeManager.h  HighResolutionTimeManagerV2.h  JsonObject.h  Logger.h  PermutationUtils.h  StringUtils.h
cpp-library/includes/: Constants.h  Logger.h  SequenceComparator.h  StringUtils.h
cpp-library/src/: Constants.cpp  FileUtils.cpp  HighResolutionTimeManager.cpp  HighResolutionTimeManagerV2.cpp  JsonObject.cpp  Logger.cpp  PermutationUtils.cpp  SequenceComparator.cpp  StringUtils.cpp  test-cpp-lib-hello.cpp  util.cpp
debug_files/: MI0000060-UniProtKBQ0VGL1_comparison_log.txt  offline-online-ortholog-mismatches_12_08_2023.txt  offline-online-ortholog-mismatches_12_08_2023_new.txt  parent-child-products-test.json
diabetes_angio_1/: data.json  general.txt  input.txt
diabetes_angio_2/: data.json  data_run1.json  data_run6_web_fullfetch.json  goterms.txt  input.txt  input_final.txt  stat_analysis_06-06-2023.json
diabetes_angio_4/: model_async_test.json  readme.txt  statistical_analysis.json
diabetes_angio_5/: readme.txt  statistically_relevant_data.json
drmemory_reports/: FileUtils_memory_error.txt  microsoft tutorial memory analysis report.txt
gene_scores/: test_score.json  test_score_all.json  test_score_homosapinesonly=false,v1-term_enums,cross_section(1).json  test_score_homosapinesonly=false,v1-term_enums,cross_section.json  test_score_homosapinesonly=false,v1-term_enums.json  test_score_homosapinesonly=false,v1.json  test_score_homosapinesonly=false,v2-term_enums,cross_section,top10.json  test_score_homosapinesonly=false,v2-term_enums,cross_section.json  test_score_homosapinesonly=false,v2-term_enums,cross_section_postprocess.json
goreverselookup/: setup.py
legacy/: constants.py  dev_generate_report.py  dev_go_download.py  dev_mrna_download.py  dev_predict_miRNA_v1.py  dev_predict_miRNA_v2.py  dev_scoring_miRNA_basic.py  dev_scoring_products_basic.py  main.py  util.py
src_data_files/: genes_trusted.txt  trusted_genes.txt  xenbase_human_ortholog_mapping.txt
term_genes/: GO-0001525.json  GO-0001935.json  GO-0001936.json  GO-0001937.json  GO-0001938.json  GO-0002040.json  GO-0002043.json  GO-0003158.json  GO-0005520.json  GO-0007519.json  GO-0008286.json  GO-0014733.json  GO-0014841.json  GO-0014858.json  GO-0016525.json  GO-0032311.json  GO-0032593.json  GO-0032869.json  GO-0038016.json  GO-0038020.json  GO-0043501.json  GO-0043534.json  GO-0043559.json  GO-0043560.json  GO-0044381.json  GO-0045765.json  GO-0045766.json  GO-0046627.json  GO-0046628.json  GO-0048632.json  GO-0090050.json  GO-0090051.json  GO-0101023.json  GO-1900078.json  GO-1901142.json  GO-1903588.json  GO-1903670.json  GO-1903671.json  GO-1903672.json  GO-1904205.json  (+2 more)
(+238 files in other folders)
